--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,12 @@
   "projects": {
     "flight-app-front": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "css",
+          "skipTests": true
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
